# ugraph

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: build.yml
examples/synth/: audio_buffer.hpp  envelope_generator.hpp  gain.hpp  mixer.hpp  oscillator.hpp  synth.hpp  trigger.hpp  voice.hpp  voice_manager.hpp
include/: ugraph.hpp
include/ugraph/: context.hpp  data_graph.hpp  dynamic_graph.hpp  edge_traits.hpp  graph.hpp  graph_printer.hpp  graph_view.hpp  interval_coloring.hpp  light_pipeline.hpp  light_pipeline_vertex.hpp  link.hpp  manifest.hpp  node.hpp  node_tag.hpp  pipeline.hpp  pipeline_vertex.hpp  producer_tag.hpp  routed.hpp  topology.hpp  type_list.hpp  vertex.hpp
include/ugraph/type_traits/: edge_traits.hpp  graph_coloring.hpp  graph_traits.hpp  type_list.hpp
tests/: CMakeLists.txt  audio_graph_tests.cpp  audio_pipeline_graph_view_tests.cpp  audio_pipeline_test.cpp  compile_time_graph_tests.cpp  graph_data_test.cpp  graph_nested_tests.cpp  graph_ordering_tests.cpp  graph_printer_tests.cpp  graph_view_counts_tests.cpp  graph_view_ordering_tests.cpp  interval_coloring_tests.cpp  light_pipeline_custom_runner_tests.cpp  light_pipeline_tests.cpp  manual_bind_tests.cpp  routed_graph_tests.cpp  test_main.cpp  topology_compile_time_tests.cpp  topology_interval_coloring_tests.cpp  topology_nested_tests.cpp  topology_priority_tests.cpp  topology_tests.cpp
